--- a/src/main/res/layout/activity_test.xml
+++ b/src/main/res/layout/activity_test.xml
@@ -1,9 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#FFCCCCCC"
+    android:orientation="vertical"
     tools:context="androidgraffitiv2.brendan.com.vg_v2.TestActivity">
 
     <ImageView
@@ -13,58 +13,80 @@
         android:layout_height="wrap_content"
         />
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:text="Activity 1 Layout" />
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"  >
 
-        <Button
-        android:id="@+id/cancel"
-        android:text="@string/cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-        <Button
-            android:id="@+id/white"
-            android:text="@string/white"
+        <ImageButton
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="fill_parent"
+            android:id="@+id/new_btn"
+            android:contentDescription="@string/start_new"
+            android:src="@drawable/new_pic"
+            />
 
-        <Button
-            android:id="@+id/yellow"
-            android:text="@string/yellow"
+        <ImageButton
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="fill_parent"
+            android:id="@+id/draw_btn"
+            android:contentDescription="@string/brush"
+            android:src="@drawable/brush"
+            />
 
-        <Button
-            android:id="@+id/black"
-            android:text="@string/black"
+        <ImageButton
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="fill_parent"
+            android:contentDescription="@string/erase"
+            android:id="@+id/erase_btn"
+            android:src="@drawable/eraser"
+            />
 
-
-        <Button
-            android:id="@+id/send"
-            android:text="@string/send"
+        <ImageButton
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="fill_parent"
+            android:id="@+id/save_btn"
+            android:src="@drawable/save"
+            />
 
-        <Button
-            android:id="@+id/new_frame"
-            android:text="@string/new_frame"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+
 
     </LinearLayout>
 
 
-</RelativeLayout>
+    <com.example.drawingfun.DrawingView
+        android:id="@+id/drawing"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="3dp"
+        android:layout_weight="1"
+        android:background="#FFFFFFFF:"  />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        android:layout_gravity="center"
+        android:orientation="vertical" >
+
+        <!-- Top Row -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            android:orientation="horizontal"
+            android:id="@+id/paint_colors"
+        </LinearLayout>
+        <!-- Bottom Row -->
+        <LinearLayout
+            android:layout_width="wrap_context"
+            android:layout_height="wrap_content">
+            android:orientation="horizontal" >
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+</LinearLayout>
