--- a/src/main/res/layout/activity_test.xml
+++ b/src/main/res/layout/activity_test.xml
@@ -47,6 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:id="@+id/save_btn"
+            android:contentDescription="@string/save"
             android:src="@drawable/save"
             />
 
