--- a/src/main/res/layout/activity_test.xml
+++ b/src/main/res/layout/activity_test.xml
@@ -65,7 +65,7 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="3dp"
         android:layout_weight="1"
-        android:background="#FFFFFFFF:"  />
+        android:background="#FFFFFFFF"  />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -142,7 +142,7 @@
         </LinearLayout>
         <!-- Bottom Row -->
         <LinearLayout
-            android:layout_width="wrap_context"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             android:orientation="horizontal" >
 
