Intent to OpenCV still WIP but safe commit before trying new stuff

--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -19,7 +19,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/opencv_btn"
+        android:clickable="false"
+        android:enabled="true" />
 
 
 </LinearLayout>
