--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -27,5 +27,21 @@
         android:clickable="false"
         android:enabled="true" />
 
+<!--    <com.google.android.gms.maps.MapView
+        android:id="@+id/map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>-->
+
+    <fragment
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/map"
+        class="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        map:cameraTargetLat="40.0264"
+        map:cameraTargetLng="-105.2519"
+        map:cameraZoom="15"
+        map:uiRotateGestures="false"/>
+
 
 </LinearLayout>
