--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -5,4 +5,6 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="AppBaseTheme" parent="AppTheme"></style>
+
 </resources>
