--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/background_material_dark">
 
     <TextView
         android:text="@string/hello_world"
@@ -17,31 +18,33 @@
         android:id="@+id/button_camera"
         android:text="@string/button_camera"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/wallet_holo_blue_light" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/opencv_btn"
+        android:text="@string/MAP"
+        android:id="@+id/map_btn"
         android:clickable="false"
-        android:enabled="true" />
+        android:enabled="true"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/primary_material_light" />
 
-<!--    <com.google.android.gms.maps.MapView
-        android:id="@+id/map"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>-->
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Swipe Mode"
+        android:id="@+id/swipeButton"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/background_floating_material_light" />
 
-    <fragment
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/map"
-        class="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        map:cameraTargetLat="40.0264"
-        map:cameraTargetLng="-105.2519"
-        map:cameraZoom="15"
-        map:uiRotateGestures="false"/>
+    <!--    <com.google.android.gms.maps.MapView
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>-->
+
 
 
 </LinearLayout>
