--- a/src/main/res/layout/activity_mapactivity.xml
+++ b/src/main/res/layout/activity_mapactivity.xml
@@ -1,16 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/background_material_dark">
 
     <TextView
         android:text="@string/hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Grid"
+        android:id="@+id/gridButton"
+        android:background="@color/background_floating_material_light" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/MAP"
+        android:id="@+id/map_btn"
+        android:clickable="false"
+        android:enabled="true"
+        android:layout_toRightOf="@+id/gridButton"
+        android:background="@color/primary_material_light"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Swipe"
+        android:id="@+id/swipeButton"
+        android:layout_toRightOf="@+id/map_btn"
+        android:background="@color/background_floating_material_light" />
+
+
+    <Button
+        android:id="@+id/button_camera"
+        android:text="@string/button_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/wallet_holo_blue_light"
+        android:layout_alignParentRight="true"/>
 
 
     <!--    <com.google.android.gms.maps.MapView
@@ -24,10 +60,11 @@
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/button_camera"
         map:cameraTargetLat="40.0264"
         map:cameraTargetLng="-105.2519"
         map:cameraZoom="15"
         map:uiRotateGestures="false"/>
 
 
-</LinearLayout>
+</RelativeLayout>
