--- a/src/main/res/layout/activity_screen_slide.xml
+++ b/src/main/res/layout/activity_screen_slide.xml
@@ -3,10 +3,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-<android.support.v4.view.ViewPager
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/pager" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Grid"
+        android:id="@+id/gridButton"
+        android:background="@color/background_floating_material_light" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/MAP"
+        android:id="@+id/map_btn"
+        android:clickable="false"
+        android:enabled="true"
+        android:layout_toRightOf="@+id/gridButton"
+        android:background="@color/primary_material_light"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Swipe"
+        android:id="@+id/swipeButton"
+        android:layout_toRightOf="@+id/map_btn"
+        android:background="@color/background_floating_material_light" />
+
+    <Button
+        android:id="@+id/button_camera"
+        android:text="@string/button_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/wallet_holo_blue_light"
+        android:layout_alignParentRight="true"/>
+
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/map_btn"
+        android:id="@+id/pager"
+        android:layout_alignParentBottom="true" />
+
+
+
+
 
 </RelativeLayout>
