--- a/src/main/res/layout/activity_photo.xml
+++ b/src/main/res/layout/activity_photo.xml
@@ -2,8 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_material_dark">
+    android:background="@color/background_material_light">
 
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Grid"
+        android:id="@+id/gridButton"
+        android:background="@color/background_floating_material_light" />
 
     <Button
         android:layout_width="wrap_content"
@@ -12,7 +19,8 @@
         android:id="@+id/map_btn"
         android:clickable="false"
         android:enabled="true"
-        android:background="@color/primary_material_light"
+        android:layout_toRightOf="@+id/gridButton"
+        android:background="@color/background_floating_material_light"
         />
 
     <Button
