--- a/src/main/res/layout/activity_screen_slide.xml
+++ b/src/main/res/layout/activity_screen_slide.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@color/background_material_light">
 
     <Button
         android:layout_width="wrap_content"
@@ -19,7 +20,7 @@
         android:clickable="false"
         android:enabled="true"
         android:layout_toRightOf="@+id/gridButton"
-        android:background="@color/primary_material_light"
+        android:background="@color/background_floating_material_light"
         />
 
     <Button
